i changed the freaking favicon! finally :)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: angular_app
 description: An online web app that uses AngularDart to model riverine streams water quality
 version: 0.0.1
 Auhtor: Mostafa Ramezani
+Contact: Darth.Mostafa@hmail.com
 environment:
   sdk: '>=2.0.0 <3.0.0'
 
